--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@ input[type="text"] {
 
 input[type="submit"] {
   padding: 0.5em 1em;
+  margin: 0 0.5em;
   border-radius: 2px;
   border: 1px;
   background-color: #fff;
