--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@
   color: #61dafb;
 }
 
+h1 {
+  font-size: 1.5em;
+}
+
 input[type="text"] {
   font-size: 16px;
   font-size: max(16px, 1em);
@@ -48,4 +52,9 @@ input[type="submit"]:active {
 input[type="submit"].disabled {
   background-color: #aaa;
   pointer-events: none;
+}
+
+pre {
+  width: 75vw;
+  white-space: normal;
 }
